introduce new metadata file add templates for tags, toc, and cover

--- a/header.tmpl
+++ b/header.tmpl
@@ -1,2 +1,2 @@
-<h2>{{.title}}</h2>
-{{if .description}}<h3>{{.description}}</h3>{{end}}
+<h2>{{.Title}}</h2>
+{{if .Description}}<h3>{{.Description}}</h3>{{end}}
